--- a/Frame/Layout/3_Content/videomob.html
+++ b/Frame/Layout/3_Content/videomob.html
@@ -8,102 +8,109 @@
     <!--Video Terms Alert -->
         <section aria-label="BookAlert" id="softwarealert">
             <div class="alert alert-warning alert-dismissible tc" role="alert">
-                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <p>Support Pro-White Creators SHARE THEIR WORK.<br> Shareing truth has never been easier.</p><br></div></section>
+                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">&nbsp;</span></button>
+                    <p>Support Pro-White Creators SHARE THEIR WORK.<br>Shareing truth has never been easier.</p><br></div></section>
     <!--Open -->
         <div id="vidz" class="panel-collapse collapsed">
-        <!--Main-->
-            <div class="content panel-body">
+            <!--Main-->
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title tc">PodCast</h3></div></div>
+            <div class="content panel-default panel-body">
                 <div class="content-inner">
-                    <section aria-label="VidArray" class="cat-main-box">
-                        <section class="comment-content"></section>
-    <!--Contain -->
-                        <div class="container-fluid tc">
-    <!--PodCast -->        
-        <!--Main -->
-                            <div class="content panel-body">
-                                <div class="content-inner 9touch">
-                                    <section aria-label="PodArray" class="cat-main-box">
-                                        <section class="comment-content"><h5 class="section-heading tc">Podcast Array</h5></section>
-    <!--Contain -->
-                                        <div class="container-fluid tc">
-    <!--Featured -->
-                <section aria-label="Christos" class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                    <div class="panel">
-                        <div class="panel-body">
-                            <h2>&nbsp;</h2>
-                            <span class="img-responsive center-block videom vm-Christogenea">&nbsp;</span>
-                            <br>
-                            <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://christogenea.org/podcasts','popup','width=600,height=600'); return false;"><span>Listen</span></a></div>
-                            <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://christogenea.org','popup','width=600,height=600'); return false;"><span>Official Site</span></a></div>
-                        </div></div></section>
-                <section aria-label="WhiteTuber" class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                    <div class="panel">
-                        <div class="panel-body">
-                            <h2>&nbsp;</h2>
-                            <span class="img-responsive center-block videom vm-WhiteTube">&nbsp;</span><br>
-                            <div class="btn-1 center-block">
-                                <a href="https://odysee.com/@Mr_White_Tuber:4" target="popup"><span>Odysee</span></a><br>
-                                <a style="center" target="popup" onclick="window.open('https://shing.tv/channel/mr-white-tuber','popup','width=600,height=600'); return false;"><span>Shing</span></a></div>
-                        </div></div></section>
-                    </div></section></div></div>
-    <!--Videos -->
-                <section aria-label="Tgnst" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                    <div class="panel">
-                        <div class="panel-body">
-                            <h2>&nbsp;</h2>
-                            <span class="img-responsive center-block videom vm-AHGSNT">&nbsp;</span><br>
-                            <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/mZpeJkSNjcA3','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
-                                <a href="https://thegreateststorynevertold.tv/" target="popup"><span>Official Site</span></a></div>
-                        </div></div></section>
-                <section aria-label="ETLB" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                    <div class="panel">
-                        <div class="panel-body">
-                            <h2>&nbsp;</h2>
-                            <span class="img-responsive center-block videom vm-Europa">&nbsp;</span><br>
-                            <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/1eLtWtEZHyie','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
-                                <a href="https://www.imdb.com/title/tt7528992/" target="popup"><span>Official IMDb</span></a></div>
-                        </div></div></section>
-                <section aria-label="100P" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                    <div class="panel">
-                        <div class="panel-body">
-                            <h2>&nbsp;</h2>
-                            <span class="img-responsive center-block videom vm-100P">&nbsp;</span><br>
-                            <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/RfnQjaSueft7/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
-                                <a href="https://truthvids.net/100-proofs-the-israelites-were-white/" target="popup"><span>Official Site</span></a></div>
-                        </div></div></section>
-                <section aria-label="HeSt" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                    <div class="panel">
-                        <div class="panel-body">
-                            <h2>&nbsp;</h2>
-                            <span class="img-responsive center-block videom vm-HSTO">&nbsp;</span><br>
-                            <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/kJimxPEGb2Wf/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
-                                <a href="https://www.hellstormdocumentary.com/hellstorm-book-and-dvd-package-now-on-sale/" target="popup"><span>Official Site</span></a></div>
-                        </div></div></section>
-                <section aria-label="BHHSA" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                    <div class="panel">
-                        <div class="panel-body">
-                            <h2>&nbsp;</h2>
-                            <span class="img-responsive center-block videom vm-BHHSA">&nbsp;</span><br>
-                            <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/video/JxtqiWuJJlSz/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
-                                <a href="https://www.bitchute.com/channel/y4eF9VGbeQwO/" target="popup"><span>Our Bitchute</span></a></div>
-                        </div></div></section>
-                <section aria-label="Rockw" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                    <div class="panel">
-                        <div class="panel-body">
-                            <h2>&nbsp;</h2>
-                            <span class="img-responsive center-block videom vm-GLR">&nbsp;</span><br>
-                            <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/video/JmVQy32hauq4/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
-                                <a href="https://www.bitchute.com/channel/y4eF9VGbeQwO/" target="popup"><span>Our Bitchute</span></a></div>
-                        </div></div></section>
-                    </div></section></div></div>
-                </div>
-                </div></section>
+                    <section aria-label="PodArray" class="cat-main-box">
+                        <!--Contain -->
+                        <div class="container-fluid">
+                            <!--PodCast -->   
+                            <div class="row panel-row tc">
+                                <!--Featured -->
+                                <section aria-label="Christos" class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                    <div class="panel">
+                                        <div class="panel-body">
+                                            <h2>&nbsp;</h2>
+                                            <span class="img-responsive center-block videom vm-Christogenea">&nbsp;</span>
+                                            <br>
+                                            <div class="btn-1 center-block">
+                                                <a style="center" target="popup" onclick="window.open('https://christogenea.org/podcasts','popup','width=600,height=600'); return false;"><span>Listen</span></a></div>
+                                            <div class="btn-1 center-block">
+                                                <a style="center" target="popup" onclick="window.open('https://christogenea.org','popup','width=600,height=600'); return false;"><span>Official Site</span></a></div>
+                                        </div></div></section>
+                                <section aria-label="WhiteTuber" class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                    <div class="panel">
+                                        <div class="panel-body">
+                                            <h2>&nbsp;</h2>
+                                            <span class="img-responsive center-block videom vm-WhiteTube">&nbsp;</span><br>
+                                            <div class="btn-1 center-block">
+                                                <a href="https://odysee.com/@Mr_White_Tuber:4" target="popup"><span>Odysee</span></a><br>
+                                                <a style="center" target="popup" onclick="window.open('https://shing.tv/channel/mr-white-tuber','popup','width=600,height=600'); return false;"><span>Shing</span></a></div>
+                                                </div></div></section>
+                                        </div></div></section>
+                            </div></div></div>
+            <!--Main-->
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title tc">Vids</h3></div></div>
+            <div class="content panel-default panel-body">
+                <div class="content-inner">
+                    <section aria-label="VidsArray" class="cat-main-box">
+                        <!--Contain -->
+                        <div class="container-fluid">
+                            <!--PodCast -->   
+                            <div class="row panel-row tc">
+                                <section aria-label="Tgnst" class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
+                                    <div class="panel">
+                                        <div class="panel-body">
+                                            <h2>&nbsp;</h2>
+                                            <span class="img-responsive center-block videom vm-AHGSNT">&nbsp;</span><br>
+                                            <div class="btn-1 center-block">
+                                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/mZpeJkSNjcA3','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
+                                                <a href="https://thegreateststorynevertold.tv/" target="popup"><span>Official Site</span></a></div>
+                                        </div></div></section>
+                                <section aria-label="ETLB" class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
+                                    <div class="panel">
+                                        <div class="panel-body">
+                                            <h2>&nbsp;</h2>
+                                            <span class="img-responsive center-block videom vm-Europa">&nbsp;</span><br>
+                                            <div class="btn-1 center-block">
+                                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/1eLtWtEZHyie','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
+                                                <a href="https://www.imdb.com/title/tt7528992/" target="popup"><span>Official IMDb</span></a></div>
+                                        </div></div></section>
+                                <section aria-label="100P" class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
+                                    <div class="panel">
+                                        <div class="panel-body">
+                                            <h2>&nbsp;</h2>
+                                            <span class="img-responsive center-block videom vm-100P">&nbsp;</span><br>
+                                            <div class="btn-1 center-block">
+                                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/RfnQjaSueft7/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
+                                                <a href="https://truthvids.net/100-proofs-the-israelites-were-white/" target="popup"><span>Official Site</span></a></div>
+                                        </div></div></section>
+                                <section aria-label="HeSt" class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
+                                    <div class="panel">
+                                        <div class="panel-body">
+                                            <h2>&nbsp;</h2>
+                                            <span class="img-responsive center-block videom vm-HSTO">&nbsp;</span><br>
+                                            <div class="btn-1 center-block">
+                                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/kJimxPEGb2Wf/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
+                                                <a href="https://www.hellstormdocumentary.com/hellstorm-book-and-dvd-package-now-on-sale/" target="popup"><span>Official Site</span></a></div>
+                                        </div></div></section>
+                                <section aria-label="BHHSA" class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
+                                    <div class="panel">
+                                        <div class="panel-body">
+                                            <h2>&nbsp;</h2>
+                                            <span class="img-responsive center-block videom vm-BHHSA">&nbsp;</span><br>
+                                            <div class="btn-1 center-block">
+                                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/video/JxtqiWuJJlSz/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
+                                                <a href="https://www.bitchute.com/channel/y4eF9VGbeQwO/" target="popup"><span>Our Bitchute</span></a></div>
+                                        </div></div></section>
+                                <section aria-label="Rockw" class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
+                                    <div class="panel">
+                                        <div class="panel-body">
+                                            <h2>&nbsp;</h2>
+                                            <span class="img-responsive center-block videom vm-GLR">&nbsp;</span><br>
+                                            <div class="btn-1 center-block">
+                                                <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/video/JmVQy32hauq4/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
+                                                <a href="https://www.bitchute.com/channel/y4eF9VGbeQwO/" target="popup"><span>Our Bitchute</span></a></div>
+                                            </div></div></section>
+                                        </div></div></section>
+                            </div></div></div>
+        </section>
