--- a/Frame/Layout/3_Content/videomob.html
+++ b/Frame/Layout/3_Content/videomob.html
@@ -13,7 +13,7 @@
     <!--Open -->
         <div id="vidz" class="panel-collapse collapsed">
             <!--Main-->
-            <div class="panel panel-default">
+            <div class="panel panel-default panel-body">
                 <div class="panel-heading">
                     <h3 class="panel-title tc">PodCast</h3></div></div>
             <div class="content panel-default panel-body">
@@ -47,7 +47,7 @@
                                         </div></div></section>
                             </div></div></div>
             <!--Main-->
-            <div class="panel panel-default">
+            <div class="panel panel-default panel-body">
                 <div class="panel-heading">
                     <h3 class="panel-title tc">Vids</h3></div></div>
             <div class="content panel-default panel-body">
