--- a/Frame/Layout/6_ReadMore/saintinfowrap.html
+++ b/Frame/Layout/6_ReadMore/saintinfowrap.html
@@ -15,6 +15,12 @@
                         <div class="btn-1 center-block">
                             <a style="center" onclick="window.open('../../B-Topic/Support/MatthewHale','_blank'); return false;"><span>Matt Hale</span></a></div> 
                     </div></div></section>
+            <section aria-label="MrBond" class="col-xl-3 col-lg-3 col-md-3 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body">
+                        <div class="btn-1 center-block">
+                            <a style="center" onclick="window.open('../../B-Topic/Support/MRBond','_blank'); return false;"><span>Mr.Bond</span></a></div> 
+                    </div></div></section>
             <section aria-label="RoofSaint" class="col-xl-3 col-lg-3 col-md-3 col-sm-4">
                 <div class="panel">
                     <div class="panel-body">
@@ -33,10 +39,10 @@
                         <div class="btn-1 center-block">
                             <a style="center" onclick="window.open('../../B-Topic/Support/RobertBowers','_blank'); return false;"><span>Robert Bowers</span></a></div> 
                     </div></div></section>
-                </div></section>
+            </div></section>
 <!--Quote -->
                 <div class="panel_row">
                     <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
                     <p class="text-muted">"The big problem is that people<wbr> don't believe a revolution is possible,<br> and it is not possible<wbr> <u>precisely because they do not believe it is possible.</u>"</p></div>
 <!--InfoWrap Close -->
-    </div>
+    </div></div>
