--- a/Frame/Layout/3_Content/cBooks/Saints/saintmob.html
+++ b/Frame/Layout/3_Content/cBooks/Saints/saintmob.html
@@ -8,76 +8,78 @@
     <!--Saint Terms Alert -->
         <section aria-label="SaintAlert" id="softwarealert">
             <div class="alert alert-warning alert-dismissible tc" role="alert">
-                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">&nbsp;</span></button>
                     <p>Words Echo.<br> A simple letter makes a world of difference.</p><br></div></section>
     <!--Open -->
             <div id="saintz" class="panel-collapse collapsed">
             <!--Main -->
-                <div class="content panel-body">
+                <div class="content panel-default panel-body">
                     <div class="content-inner">
                         <section aria-label="SaintArray" class="cat-main-box">
-    <!--Contain -->
-            <div class="container-fluid tc">
-    <!--Writings -->
-                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                        <div class="panel">
-                            <div class="panel-body">
-                                <h2>Dylan Roof</h2> 
-                                <span class="img-responsive  center-block saintm sm-Roofss">&nbsp;</span><br>
-                                <p>Forgive Any Typos</p>
-                                <div class="btn-1 center-block">
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/DylanRoofManifesto.pdf','popup'); return false;"><span>Read</span></a> 
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../B-Topic/Support/DylanRoof','popup'); return false;"><span>Support</span></a></div>
-                            </div></div></section>
-                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                        <div class="panel">
-                            <div class="panel-body">
-                                <h2>Matt Hale</h2>
-                                <span class="img-responsive  center-block saintm sm-Hale">&nbsp;</span><br>
-                                <p>Ending White Slavery</p>
-                                <div class="btn-1 center-block">
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/EndingWhiteSlavery.pdf','popup'); return false;"><span>Read</span></a>
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../B-Topic/Support/MatthewHale','popup'); return false;"><span>Support</span></a></div>
-                            </div></div></section>
-                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                        <div class="panel">
-                            <div class="panel-body">
-                                <h2>John Earnest</h2>
-                                <span class="img-responsive center-block saintm sm-Earnest">&nbsp;</span><br>
-                                <p>An Open Letter</p>
-                                <div class="btn-1 center-block">
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/JohnEarnestManifesto.pdf','popup'); return false;"><span>Read</span></a> 
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../B-Topic/Support/JohnEarnest','popup'); return false;"><span>Support</span></a></div>
-                            </div></div></section>
-                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                        <div class="panel">
-                            <div class="panel-body">
-                                <h2>Anders Breivik</h2> 
-                                <span class="img-responsive center-block saintm sm-Breivik">&nbsp;</span><br>
-                                <p>2083</p>
-                                <div class="btn-1 center-block">
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/AndersBehringBreivikManifesto.pdf','width=600,height=600'); return false;"><span>Read</span></a>
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/AndersBehringBreivikManifesto.pdf','width=600,height=600'); return false;"><span>DL</span></a></div>
-                            </div></div></section>
-                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                        <div class="panel">
-                            <div class="panel-body">
-                                <h2>Ted Kaczynski</h2> 
-                                <span class="img-responsive center-block saintm sm-Kacz">&nbsp;</span><br>
-                                <p>Industrial Society</p>
-                                <div class="btn-1 center-block">
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/IndustrialSociety.pdf','popup'); return false;"><span>Read</span></a>
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('https://www.NineNeins.com/B-Topic/NatSoc/books','popup'); return false;"><span>Books</span></a></div>
-                            </div></div></section>
-                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                        <div class="panel">
-                            <div class="panel-body">
-                                <h2>Brenton Tarrant</h2>
-                                <span class="img-responsive center-block saintm sm-Tarrant">&nbsp;</span><br>
-                                <p>Great Replacement</p>
-                                <div class="btn-1 center-block">
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/GreatReplacement.pdf','popup'); return false;"><span>Read</span></a>
-                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/GreatReplacement.pdf','popup'); return false;"><span>DL</span></a></div>
-                                </div></div></section>
-                            </div></section></div></div></div>
-                        </div></section>
+                            <!--Contain -->
+                            <div class="container-fluid">
+                                <!--Writings -->
+                                <div class="row panel-row tc">
+                                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+                                        <div class="panel">
+                                            <div class="panel-body">
+                                                <h2>Dylan Roof</h2> 
+                                                <span class="img-responsive  center-block saintm sm-Roofss">&nbsp;</span><br>
+                                                <p>Forgive Any Typos</p>
+                                                <div class="btn-1 center-block">
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/DylanRoofManifesto.pdf','popup'); return false;"><span>Read</span></a> 
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../B-Topic/Support/DylanRoof','popup'); return false;"><span>Support</span></a></div>
+                                            </div></div></section>
+                                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+                                        <div class="panel">
+                                            <div class="panel-body">
+                                                <h2>Matt Hale</h2>
+                                                <span class="img-responsive  center-block saintm sm-Hale">&nbsp;</span><br>
+                                                <p>Ending White Slavery</p>
+                                                <div class="btn-1 center-block">
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/EndingWhiteSlavery.pdf','popup'); return false;"><span>Read</span></a>
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../B-Topic/Support/MatthewHale','popup'); return false;"><span>Support</span></a></div>
+                                            </div></div></section>
+                                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+                                        <div class="panel">
+                                            <div class="panel-body">
+                                                <h2>John Earnest</h2>
+                                                <span class="img-responsive center-block saintm sm-Earnest">&nbsp;</span><br>
+                                                <p>An Open Letter</p>
+                                                <div class="btn-1 center-block">
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/JohnEarnestManifesto.pdf','popup'); return false;"><span>Read</span></a> 
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../B-Topic/Support/JohnEarnest','popup'); return false;"><span>Support</span></a></div>
+                                            </div></div></section>
+                                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+                                        <div class="panel">
+                                            <div class="panel-body">
+                                                <h2>Anders Breivik</h2> 
+                                                <span class="img-responsive center-block saintm sm-Breivik">&nbsp;</span><br>
+                                                <p>2083</p>
+                                                <div class="btn-1 center-block">
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/AndersBehringBreivikManifesto.pdf','width=600,height=600'); return false;"><span>Read</span></a>
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/AndersBehringBreivikManifesto.pdf','width=600,height=600'); return false;"><span>DL</span></a></div>
+                                            </div></div></section>
+                                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+                                        <div class="panel">
+                                            <div class="panel-body">
+                                                <h2>Ted Kaczynski</h2> 
+                                                <span class="img-responsive center-block saintm sm-Kacz">&nbsp;</span><br>
+                                                <p>Industrial Society</p>
+                                                <div class="btn-1 center-block">
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/IndustrialSociety.pdf','popup'); return false;"><span>Read</span></a>
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('https://www.NineNeins.com/B-Topic/NatSoc/books','popup'); return false;"><span>Books</span></a></div>
+                                            </div></div></section>
+                                    <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+                                        <div class="panel">
+                                            <div class="panel-body">
+                                                <h2>Brenton Tarrant</h2>
+                                                <span class="img-responsive center-block saintm sm-Tarrant">&nbsp;</span><br>
+                                                <p>Great Replacement</p>
+                                                <div class="btn-1 center-block">
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/GreatReplacement.pdf','popup'); return false;"><span>Read</span></a>
+                                                    <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/GreatReplacement.pdf','popup'); return false;"><span>DL</span></a></div>
+                                                </div></div></section>
+                                        </div></div></section>
+                            </div></div></div>
+        </div></section>
