--- a/Frame/Layout/3_Content/BSupport/philliPro.html
+++ b/Frame/Layout/3_Content/BSupport/philliPro.html
@@ -1,27 +1,54 @@
-<!--Bio -->
-                <section aria-label="MHBio" class="comment-content">
-                <h4>Philip Hassler</h4>
-            <!--Figure -->
-                <figure id="MattHale" class="clearfix">
-                    <span class="img-responsive col-xl-6 col-lg-6 col-md-6 col-sm-6 center-block saint-sd sd-BondOpticss">&nbsp;</span>
-                    <figcaption id="HaleBio" class="col-xl-6 col-lg-6 col-md-6 col-sm-6"><br>
-                        <table class="data no-wrap">
-                                <tr>
-                                    <th>Birthday</th>
-                                    <td>Dec 28, 1986</td></tr>
-                                <tr>
-                                    <th>Act</th>
-                                    <td>tbd</td></tr>
-                                <tr>
-                                    <th>Convicted</th>
-                                    <td>Yes - April 6, 2005</td></tr>
-                                <tr>
-                                    <th>Sentenced</th>
-                                    <td>10 Years - March 31, 2022</td>
-                                    <th>Release Date</th>
-                                    <td>tbd</tr>
-                        </table></figcaption></figure>
-<!--Summary-->
-                <section aria-label="MHSumm" class="comment-content">
-                    <p>Philip Hassler of Austria, was born Dec 28th 1986. Phillip whims stage name you may know him by Mr.Bond was arrested on January 20, 2021 for making music. Philip has been prosecuted and sentenced to 10 years for producing and spreading Nazi ideas and inciting hatred.</p> 
-                </section></section>
+<!--Top BondPro-->
+<section aria-label="bondproTop">
+    <div class="panel-default">
+        <!--Name -->
+        <section aria-label="MHBio" class="panel-default panel-body comment-content">
+            <section class="panel panel-default panel-body">
+                <div class="panel-heading">
+                    <hgroup class="panel-title tc">
+                        <h6>Philip Hassler</h6>
+                        <h5>aka Mr.Bond</h5></hgroup></div></section>
+            <!--Box-->
+            <div class="content panel panel-default panel-body">
+                <div class="content-inner">
+                    <section aria-label="BondArray" class="cat-main-box">
+                        <!--Contain-->
+                        <div class="container-fluid">
+                            <div class="clearfix"></div>
+                            <div class="row panel-row tc">
+                                <!--Bond Image-->
+                                <figure aria-label="PhillipBond"> 
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                        <div class="panel">
+                                            <div class="panel-body">
+                                                <span class="img-responsive center-block saint-sd sd-BondOpticss">&nbsp;</span></div></div></div>
+                                    <!--Bond Brief-->
+                                    <figcaption aria-label="BondBio"> 
+                                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                            <div class="panel">
+                                                <div class="panel-body">
+                                                     <table class="dltab data no-wrap" style="width: 300px; height: 300px;">
+                                                            <tr>
+                                                                <th>Birthday</th>
+                                                                <td class="yelloOn">Dec 28, 1986</td></tr>
+                                                            <tr>
+                                                                <th>Act</th>
+                                                                <td class="yelloOn">tbd</td></tr>
+                                                            <tr>
+                                                                <th>Convicted</th>
+                                                                <td class="yelloOn">April 6, 2005</td></tr>
+                                                            <tr>
+                                                                <th>Sentenced</th>
+                                                                <td class="yelloOn">March 31, 2022<br>(10 Years)</td></tr>
+                                                            <tr>    
+                                                                <th>Release Date</th>
+                                                                <td class="yelloOn">tbd</td></tr>
+                                                            </table></div></div></div>
+                                                </figcaption></figure>
+                                    </div></div></section></div>
+                <div class="clearfix"></div>
+                <div class="panel-default panel-body tc">
+                    <h5 class="bh">Bio</h5>
+                    <p>Philip Hassler of Austria, was born Dec 28th 1986. Phillip whims stage name you may know him by Mr.Bond was arrested on January 20, 2021 for making music. Philip has been prosecuted and sentenced to 10 years for producing and spreading Nazi ideas and inciting hatred.</p></div></div>
+        </section></div></section>
+
