--- a/Frame/Layout/6_ReadMore/BSupport/phillipinfowrap.html
+++ b/Frame/Layout/6_ReadMore/BSupport/phillipinfowrap.html
@@ -1,5 +1,19 @@
+<!--InfoWrap Open -->
+    <div class="panel-body">
+        <section class="content" aria-label="saintwrapp">
+            <div class="panel-footy panel-default tc">
+<!--Header -->
+                <hgroup>
+                    <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
+                    <h4>o/ Bond</h4></hgroup>
+                <p class="text-muted">We dont need anymore martyrs.<br>We dont need anymore lost Brothers or Sisters.</p><p class="text-muted"> What we do need is to make sure our boys did not sacrifice and have given it all up in vain.<br> 
+                Give them an o/ and love.</p>  
+
+            </div></section>
+<!--Quote -->
                 <div class="panel_row">
                     <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p class="section-heading text-muted">"If you know someone who’s in prison and you haven’t written them yet, consider doing so. You’re probably underestimating how much a letter from outside brightens someone’s day in here, even if you’re just telling them your boring week."<br>
+                    <p class="section-heading text-muted">"If you know someone who’s in prison and you haven’t written them yet, consider doing so. You’re probably underestimating how much a letter from outside brightens someone’s day in here, even if you’re just telling them your boring week."<br><u><a href="https://freemrbond.com"><span class="text-muted">-https://freemrbond.com</span></a></u></p></div>
 
-                        <u><a href="https://freemrbond.com"><span class="pb">https://freemrbond.com</span></a></u></p></div></div>
+<!--InfoWrap Close -->
+    </div></div>
