Saint Bond Update Fixes

--- a/Frame/Layout/3_Content/BSupport/Send/phillip.html
+++ b/Frame/Layout/3_Content/BSupport/Send/phillip.html
@@ -14,7 +14,7 @@
                             <h5>Wire transfers:</h5>
                             <h5>[Must include his name, ID + DOB as a note]</h5></hgroup>  
 
-                        <table class="dltab data no-wrap" style="width: 300px; height: 300px;">
+                        <table class="dltab data no-wrap center-block" style="width: 300px; height: 300px;">
                             <tr>
                                 <th>NAME</th>
                                 <td class="yelloOn">Philip Hassler</td></tr>
@@ -27,9 +27,6 @@
                             <tr>
                                 <th>BIC</th>
                                 <td class="yelloOn">BUNDATWW</td></tr>
-                            <tr>    
-                                <th>Release Date</th>
-                                <td class="yelloOn">tbd</td></tr>
                             </table>
 
                         <strong>ADDRESS</strong>:
@@ -38,7 +35,7 @@
                         AUSTRIA
                         <p><u><i>OR</i></u></p>
 
-                        <div>
+                        <div class="center-block">
                             <div class="btn btn-shoppe" style="margin:7px" aria-expanded="false"> <span>
                                 <svg fill="#999999" width="108px" height="108px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 0C5.365 0 0 5.373 0 12.015c0 1.335.228 2.607.618 3.81h3.577V5.729L12 13.545l7.805-7.815v10.095h3.577c.389-1.203.618-2.475.618-3.81C24 5.375 18.635 0 12 0zm-1.788 15.307l-3.417-3.421v6.351H1.758C3.87 21.689 7.678 24 12 24s8.162-2.311 10.245-5.764h-5.04v-6.351l-3.386 3.421-1.788 1.79-1.814-1.79h-.005z"/></svg></span></div>
                             <div class="clearfix"></div>
@@ -47,8 +44,10 @@
                                 <a onclick="copyContentsmc();"><span>Send XMR</span></a></div>
                         </div>
                         <p><strong>Bitcoin</strong>:<br>
-                        <strong>Cold</strong> : bc1q5643atsxajk5gs7gkan9532m6cru2g0mc9k62m<br>
-                        <strong>Hot/NFT</strong> :  1NBG9MSBF363t8J4r9LMYakhjZMnd58Y7N</p>
+                        <strong>Cold</strong> :<br> 
+                            <textarea id="bitcoin_ccoin">bc1q5643atsxajk5gs7gkan9532m6cru2g0mc9k62m</textarea><br>
+                        <strong>Hot/NFT</strong> :<br>  
+                            <textarea id="bitcoin_hcoin">1NBG9MSBF363t8J4r9LMYakhjZMnd58Y7N</textarea></p>
                         <span>&nbsp;</span>
                     </section></div>
 
