--- a/Frame/Layout/3_Content/BSupport/philliPro.html
+++ b/Frame/Layout/3_Content/BSupport/philliPro.html
@@ -18,13 +18,13 @@
                             <div class="row panel-row tc">
                                 <!--Bond Image-->
                                 <figure aria-label="PhillipBond"> 
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                         <div class="panel">
                                             <div class="panel-body">
                                                 <span class="img-responsive center-block saint-sd sd-BondOpticss">&nbsp;</span></div></div></div>
                                     <!--Bond Brief-->
                                     <figcaption aria-label="BondBio"> 
-                                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                             <div class="panel">
                                                 <div class="panel-body">
                                                      <table class="dltab data no-wrap" style="width: 300px; height: 300px;">
@@ -33,16 +33,16 @@
                                                                 <td class="yelloOn">Dec 28, 1986</td></tr>
                                                             <tr>
                                                                 <th>Act</th>
-                                                                <td class="yelloOn">tbd</td></tr>
+                                                                <td class="yelloOn">April 2016-2019</td></tr>
                                                             <tr>
-                                                                <th>Convicted</th>
-                                                                <td class="yelloOn">April 6, 2005</td></tr>
+                                                                <th>Arrested</th>
+                                                                <td class="yelloOn">January 20, 2021</td></tr>
                                                             <tr>
                                                                 <th>Sentenced</th>
                                                                 <td class="yelloOn">March 31, 2022<br>(10 Years)</td></tr>
                                                             <tr>    
                                                                 <th>Release Date</th>
-                                                                <td class="yelloOn">tbd</td></tr>
+                                                                <td class="yelloOn">March 31, 2032</td></tr>
                                                             </table></div></div></div>
                                                 </figcaption></figure>
                                     </div></div></section></div>
